# flux-explorer

./: .gitignore  PKGBUILD  README.md  flux-explorer.desktop  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
src/: app.js  index.html  style.css  themes.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/modules/: archives.js  batch-rename.js  bookmarks.js  clipboard.js  context-menu.js  dialogs.js  disk-usage.js  dragdrop.js  duplicates.js  files.js  filters.js  git.js  hash.js  highlight.js  icons.js  inline-rename.js  keyboard.js  mounts.js  navigation.js  open-with.js  palette.js  preview.js  progress.js  properties.js  recent.js  resize.js  search.js  sidebar.js  state.js  statusbar.js  tabs.js  theme.js  thumbnails.js  titlebar.js  trash.js  utils.js
