[package]
name = "flux-explorer"
version = "0.2.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
trash = "5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "ico"] }
base64 = "0.22"
notify = "6"
notify-debouncer-mini = "0.4"
libc = "0.2"
tokio = { version = "1", features = ["rt", "macros"] }
kamadak-exif = "0.5"
sha2 = "0.10"
md-5 = "0.10"
sha1 = "0.10"

[build-dependencies]
tauri-build = { version = "2", features = [] }
